tests/baselines/reference/parservoidInQualifiedName1.errors.txt
==== tests/cases/conformance/parser/ecmascript5/parservoidInQualifiedName1.ts (2 errors) ====
    var v : void.x;
            ~~~~
!!! error TS1003: Identifier expected.
                ~
!!! error TS1109: Expression expected.